Fix FAQ on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -771,15 +771,6 @@ footer {
         width: 90%;
     }
 
-    #faq #faq-wrapper #faq-cards {
-        // flex-direction: column;
-
-        &-left, &-right {
-            // margin: 0 auto;
-            // width: 90%;
-        }
-    }
-
     #leadership #leaders {
         grid-template-columns: repeat(5, $leadership-size-mobile);
         justify-content: space-between;
@@ -886,6 +877,23 @@ footer {
         &-left, &-right {
             margin: 0;
             width: 100%;
+        }
+
+        .card {
+            .accordion-header {
+                padding: 10px 20px;
+                font-size: 1em;
+            }
+            .panel {
+                padding: 20px;
+                margin-left: 30px;
+                 // TODO: Why does padding: 10px not look good?
+                padding-bottom: 10px;
+
+                p {
+                    margin-bottom: 0;
+                }
+            }
         }
     }
 
